Replaced Integer construct with Integer.valueOf()